--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ html, body {
 }
 
 #nav {
+  overflow: hidden;
   display: block;
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -66,6 +67,14 @@ html, body {
 #nav > ul > li:hover > a {
   border-left: 2px solid rgba(34, 255, 192, 0.5019607843);
   transition: 0.2s;
+}
+#nav #versionInfo {
+  color: #3d3d3d;
+  font-size: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 4px;
 }
 
 button {
@@ -132,6 +141,9 @@ select#payload_select {
   text-align: right;
   padding: 2px;
   width: 100px;
+}
+select#payload_select option {
+  text-align: center;
 }
 select#payload_select:hover {
   background: #4d4d4d;
