--- a/src/frontend/css/style.scss
+++ b/src/frontend/css/style.scss
@@ -1,5 +1,5 @@
 html, body {
-    background: #2d2d2d;
+    background: #1d1d1d;
     color: #fff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -7,6 +7,8 @@ html, body {
 }
 
 #main {
+    height: 100vh;
+    background: #2d2d2d;
     display: block;
     overflow: hidden;
     #content {
@@ -18,8 +20,9 @@ html, body {
     >a {
         color: #22ffc2 !important;
         border-left: 2px solid #22ffc2 !important;
-        cursor: default;
+        cursor: default !important;
         transition: 0.5s;
+        padding-left: 2px;
     }
 }
 
@@ -28,7 +31,6 @@ html, body {
     display: block;
     width: max-content;
     height: 100vh;
-    background-color: #1d1d1d;
     white-space: nowrap;
     float:left;
     #logoNav {
@@ -61,7 +63,7 @@ html, body {
                 transition: 0.2s;
                 cursor: pointer;
             }
-            &:hover > a {
+            &:hover > a{
                 border-left: 2px solid #22ffc080;
                 transition: 0.2s;
             }
@@ -121,6 +123,7 @@ button#payload_inject {
     border-radius: 4px;
     padding: 2px;
     width: 65px;
+    cursor: pointer;
 }
 button#payload_config {
     border-radius: 4px;
@@ -183,4 +186,8 @@ select#payload_select {
     >span:before {
         content: "✖";
     }
+}
+
+.noClick {
+    pointer-events: none;
 }
