--- a/src/frontend/css/style.scss
+++ b/src/frontend/css/style.scss
@@ -1,14 +1,56 @@
+
+[theme="dark"] {
+    --mainColor: #22ffc2;
+    --mainColorHover: #7bffda;
+    --mainColorHoverAlt: #1fb389;
+    --navBar: #1d1d1d;
+    --navBarTabTextColor: #fff;
+    --navBarTabHoverColor: #1fb389;
+    --navBarSeperator: #ffffff35;
+    --navBarVNum: #3d3d3d;
+    --rcmStatusIdle: 34, 122, 255;
+    --rcmStatusOK: 34, 255, 194;
+    --rcmStatusNO: 255, 34, 34;
+    --buttonTextColor: #fff;
+    --buttonColor: #3d3d3d;
+    --buttonColor: #4d4d4d;
+    --dropdownColor: #3d3d3d;
+    --dropdownHoverColor: #4d4d4d;
+    --primaryBgColor: #2d2d2d;
+    --primaryTextColor: #fff;
+}
+[theme="light"] {
+    --mainColor: #1fb389;
+    --mainColorHover: #7bffda;
+    --mainColorHoverAlt: #22ffc2;
+    --navBar: #d9d9d9;
+    --navBarTabTextColor: #000;
+    --navBarTabHoverColor: #188b6a;
+    --navBarSeperator: #00000035;
+    --navBarVNum: #a4a4a4;
+    --rcmStatusIdle: 34, 122, 255;
+    --rcmStatusOK: 34, 255, 194;
+    --rcmStatusNO: 255, 34, 34;
+    --buttonTextColor: #000;
+    --buttonColor: #d9d9d9;
+    --buttonColor: #eeeeee;
+    --dropdownColor: #eeeeee;
+    --dropdownHoverColor: #d9d9d9;
+    --primaryBgColor: #a4a4a4;
+    --primaryTextColor: #000;
+}
+
 html, body {
-    background: #1d1d1d;
-    color: #fff;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: var(--navBar);
+    color: var(--primaryTextColor);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     user-select: none;
 }
 
 #main {
     height: 100vh;
-    background: #2d2d2d;
+    background: var(--primaryBgColor);
     display: block;
     overflow: hidden;
     #content {
@@ -18,8 +60,8 @@ html, body {
 
 .selectedTab {
     >a {
-        color: #22ffc2 !important;
-        border-left: 2px solid #22ffc2 !important;
+        color: var(--mainColor) !important;
+        border-left: 2px solid var(--mainColor) !important;
         cursor: default !important;
         transition: 0.5s;
         padding-left: 2px;
@@ -36,6 +78,7 @@ html, body {
     #logoNav {
         text-align: center;
         transform: translateY(2px);
+        transition: 0.5s;
     }
     >ul {
         margin: 0;
@@ -43,7 +86,7 @@ html, body {
         list-style-type: none;
         >li {
             #funnyLine {
-                border-bottom: 2px solid #ffffff35;
+                border-bottom: 2px solid var(--navBarSeperator);
                 width: 75px;
                 height: 38px;
                 transform: translateX(-5px);
@@ -54,7 +97,7 @@ html, body {
             }
             > a {
                 display: block;
-                color: #fff;
+                color: var(--navBarTabTextColor);
                 text-decoration: none;
                 text-align: left;
                 padding: 1px 8px;
@@ -64,13 +107,13 @@ html, body {
                 cursor: pointer;
             }
             &:hover > a{
-                border-left: 2px solid #22ffc080;
+                border-left: 2px solid var(--navBarTabHoverColor);
                 transition: 0.2s;
             }
         }
     }
     #versionInfo {
-        color:#3d3d3d;
+        color: var(--navBarVNum);
         font-size: 10px;
         position: absolute;
         bottom: 0;
@@ -80,36 +123,36 @@ html, body {
 }
 
 button {
-    background: #3d3d3d;
-    color: #fff;
+    background: var(--buttonColor);
+    color: var(--buttonTextColor);
     border-radius: 8px;
     border: none;
     outline: none;
     margin: 2px;
     transition: 0.1s ease-in;
     &:hover {
-        background: #4d4d4d;
+        background: var(--buttonColorHover);
         transition: 0.1s ease-in;
     }
 }
 
 a {
-    color: #22ffc2;
+    color: var(--mainColor);
     transition: 0.2s ease;
     text-decoration-line: none;
     &:hover {
-        color: #1fb389;
+        color: var(--mainColorHoverAlt);
         transition: 0.2s ease;
     }
     &:active {
-        color: #7bffda;
+        color: var(--mainColorHover);
         transition: 0.2s ease;
         text-decoration-line: none;
     }
 }
 
 [rcm_detected] button#payload_inject:active {
-    background: #22ffc2;
+    background: var(--mainColor);
     color: #2d2d2d;
 }
 
@@ -131,9 +174,9 @@ button#payload_config {
     width: 116px;
 }
 
-select#payload_select {
-    background: #3d3d3d;
-    color: #fff;
+select {
+    background: var(--dropdownColor);
+    color: var(--buttonTextColor);
     border-radius: 4px;
     border: none;
     outline: none;
@@ -141,17 +184,20 @@ select#payload_select {
     text-align: right;
     padding: 2px;
     width: 100px;
+    &#themeSel {
+        width: 116px;
+    }
     option {
         text-align: center;
     }
     &:hover {
-        background: #4d4d4d;
+        background: var(--dropdownHoverColor);
         transition: 0.1s ease-in;
     }
 }
 
 #rcm_status {
-    --statusColor: 34, 122, 255;
+    --statusColor: var(--rcmStatusIdle);
     background: rgba(var(--statusColor), 0.25);
     color: rgb(var(--statusColor));
     text-align: center;
@@ -173,7 +219,7 @@ select#payload_select {
 }
 
 [rcm_detected] #rcm_status {
-    --statusColor: 34, 255, 194;
+    --statusColor: var(--rcmStatusOK);
     transition: 0.3s ease;
     >span:before {
         content: "✔";
@@ -181,7 +227,7 @@ select#payload_select {
 }
 
 [rcm_undetected] #rcm_status {
-    --statusColor: 255, 34, 34;
+    --statusColor: var(--rcmStatusNO);
     transition: 0.3s ease;
     >span:before {
         content: "✖";
